--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
         <table border="1">
             <tr>
                 <th>Nombre</th>
-                <th>tipos</th>
+                <th>Tipos</th>
                 <th>Nivel</th>
                 <th>Habilidades</th>
                 <th>Evoluciones</th>
