--- a/src/main/resources/templates/modificar.html
+++ b/src/main/resources/templates/modificar.html
@@ -24,6 +24,8 @@
             <input type="checkbox" name="tipos" value="Volador">Volador
             <input type="checkbox" name="tipos" value="Hielo">Hielo
             <input type="checkbox" name="tipos" value="Acero">Acero
+            <input type="checkbox" name="tipos" value="Veneno">Veneno
+            <input type="checkbox" name="tipos" value="Electrico">Electrico
         <br/>
         <br/>
         <label>Nivel:</label>
@@ -55,6 +57,9 @@
             <input type="checkbox" name="habilidades" value="CantoHelado">CantoHelado
             <input type="checkbox" name="habilidades" value="AlaDeAcero">AlaDeAcero
             <input type="checkbox" name="habilidades" value="BombaIman">BombaIman
+            <input type="checkbox" name="habilidades" value="PolvoVeneno">PolvoVeneno
+            <input type="checkbox" name="habilidades" value="BolaVoltio">BolaVoltio
+            <input type="checkbox" name="habilidades" value="OndaTrueno">OndaTrueno
         <br/>
         <br/>
        <!-- <div th:if="${pokemon.getEvoluciones().isEmpty}">
